style bottom tab

--- a/app.json
+++ b/app.json
@@ -15,7 +15,9 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -27,6 +29,8 @@
     },
     "web": {
       "favicon": "./assets/images/favicon.png"
-    }
+    },
+    "description": "cross platfrom native mobile app for managing a smartphone's repair shop",
+    "githubUrl": "https://github.com/moh3a/biyou_repair"
   }
 }
