--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "web": "expo start --web",
     "eject": "expo eject",
     "test": "jest --watchAll",
+    "deploy": "npm run predeploy && firebase deploy --only hosting",
     "predeploy": "expo build:web",
-    "deploy-hosting": "npm run predeploy && firebase deploy --only hosting"
+    "deploy-hosting": "firebase deploy --only hosting"
   },
   "jest": {
     "preset": "jest-expo"
