--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "@reduxjs/toolkit": "^1.7.2",
+    "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-asset": "~8.4.4",
     "expo-constants": "~13.0.0",
@@ -36,6 +37,7 @@
     "expo-updates": "~0.11.6",
     "expo-web-browser": "~10.1.0",
     "firebase": "^9.6.7",
+    "nodemailer": "^6.7.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -54,6 +56,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/nodemailer": "^6.4.4",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
     "jest": "^26.6.3",
